Add some custom aliases to my gitconfig

--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -1,10 +1,16 @@
 [user]
 	name = Nei Cardoso de Oliveira Neto
 	email = nei.neto@hotmail.com
+[alias]
+	authors = shortlog -sne
+	fast-forward-branch = "!git merge-base --is-ancestor $1 $2 && git branch -D $1 && git branch $1 $2 && echo \"Successfully created ${1} tracking ${2}\" #"
+	find-files = "log --all --name-only --"
+	l = log --oneline --graph
+	lfs-scrub = "!rm -rf .git/lfs/objects"
+	s = status --short
+	tracking = "for-each-ref --sort upstream --format='%(refname:short)%09<- %(upstream:short)' refs/heads"
 [core]
 	editor = nano
 	pager = less
 [help]
 	autocorrect = 5
-
-
