Update with many changes

--- a/dotfiles/.config_-_Code_-_User_-_settings.json
+++ b/dotfiles/.config_-_Code_-_User_-_settings.json
@@ -1,3 +1,53 @@
 {
-    "workbench.colorTheme": "Monokai"
+    "workbench.colorTheme": "Monokai",
+    "editor.suggestSelection": "first",
+    "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
+    "vsintellicode.features.python.deepLearning": "enabled",
+    "editor.rulers": [
+        79,
+        88,
+        100,
+    ],
+    "java.home": "/home/gaius/.local/java/jdk-14.0.2+12/",
+    "jupyter.interactiveWindowMode": "perFile",
+    "window.zoomLevel": 0,
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.python",
+    },
+    "pylance.insidersChannel": "daily",
+    "python.analysis.completeFunctionParens": true,
+    "python.analysis.typeCheckingMode": "basic",
+
+    "python.formatting.provider": "black",
+    "python.languageServer": "Pylance",
+
+    "autoDocstring.docstringFormat": "sphinx",
+    "autoDocstring.generateDocstringOnEnter": true,
+    "autoDocstring.includeExtendedSummary": false,
+    "autoDocstring.includeName": false,
+    "autoDocstring.startOnNewLine": true, //New line before summary placeholder
+    "autoDocstring.guessTypes": true,
+    "autoDocstring.quoteStyle": "\"\"\"",
+    "gitlens.codeLens.scopes": [
+        "document"
+    ],
+    "workbench.activityBar.visible": true,
+    "workbench.statusBar.visible": true,
+    "window.menuBarVisibility": "default",
+    "editor.minimap.enabled": true,
+
+    
+    // "editor.semanticTokenColorCustomizations": {
+    //     "[One Dark Pro]": { // Apply to this theme only
+    //         "enabled": true,
+    //         "rules": {
+    //             "magicFunction:python": "#ee0000",
+    //             "function.declaration:python": "#990000",
+    //             "*.decorator:python": "#0000dd",
+    //             "*.typeHint:python": "#5500aa",
+    //             "*.typeHintComment:python": "#aaaaaa"
+    //         }
+    //     }
+    // }
+    
 }
