--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -9,9 +9,10 @@
 	l = log --oneline --graph
 	lfs-scrub = "!rm -rf .git/lfs/objects"
 	ls-non-annexed-files = "!~/apps/ls-non-annexed-files.sh"
+	pushall = !git remote | xargs -L1 git push --all
+	rewrite-commiter-to-author = filter-branch --commit-filter 'export GIT_COMMITTER_NAME="$GIT_AUTHOR_NAME"; export GIT_COMMITTER_EMAIL="$GIT_AUTHOR_EMAIL"; export GIT_COMMITTER_DATE="$GIT_AUTHOR_DATE"; git commit-tree "$@"' -- master..HEAD
 	s = status --short
 	tracking = "for-each-ref --sort upstream --format='%(refname:short)%09<- %(upstream:short)' refs/heads"
-	pushall = !git remote | xargs -L1 git push --all
 	wdiff = diff --color-words
 [commit]
 	gpgSign = true
@@ -24,3 +25,5 @@
 	ff = only
 [init]
 	defaultBranch = master
+[mergetool]
+	keepBackup = false
